prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@ html {
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     margin: 0;
+    overflow: hidden;
+    height: 100vh;
+}
+
+.scrolling {
+    overflow: auto;
+    height: 80vh;
 }
 
 body.dark {
